welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:6: error: ambiguous reference to overloaded definition,
both method ecritMessage in class AbstractBuggle of type (x$1: Int)Unit
and  method ecritMessage in class AbstractBuggle of type (x$1: String)Unit
match expected type ?
      ecritMessage
      ^